Set loopback to up so that we can route to ourselves I guess. This should be done by the CNI

--- a/bash-poc/container-vagrant/peer-container0.conf
+++ b/bash-poc/container-vagrant/peer-container0.conf
@@ -2,6 +2,7 @@
 [Interface]
 Address = 10.0.0.3
 PrivateKey = EK1DWZkUjrXjQJUnWsbgI5WnOOEWVJDRKBCBNKX3yXI=
+PostUp = ip link set lo up
 
 # wg0 - server host
 [Peer]
