--- a/bash-poc/container-vagrant/server-container0.conf
+++ b/bash-poc/container-vagrant/server-container0.conf
@@ -2,6 +2,7 @@
 [Interface]
 Address = 10.0.10.3
 PrivateKey = iBDdm9fXmcy+wAl26Ef6zZcnc0Q01oGi8KIVQoYtAFg=
+PostUp = ip link set lo up
 
 # wg0 on server
 [Peer]
