Server/container -> server/container

--- a/bash-poc/container-vagrant/peer-container0.conf
+++ b/bash-poc/container-vagrant/peer-container0.conf
@@ -5,9 +5,9 @@ PrivateKey = EK1DWZkUjrXjQJUnWsbgI5WnOOEWVJDRKBCBNKX3yXI=
 PostUp = ip link set lo up
 
 # wg0 - server host
-[Peer]
-PublicKey = v2XPnF7Yk7KEugBRVyCdD6mssm2Tsc4edDUApwzFoBk=
-AllowedIPs = 10.0.10.1/32
+#[Peer]
+#PublicKey = v2XPnF7Yk7KEugBRVyCdD6mssm2Tsc4edDUApwzFoBk=
+#AllowedIPs = 10.0.10.1/32
 
 # wg0 - peer host
 [Peer]
@@ -16,6 +16,6 @@ PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
 AllowedIPs = 0.0.0.0/0
 
 # container 0 - server host
-[Peer]
-PublicKey = X7qQfHNDtiUS5+qg2H5T25IwhcWdVbyoFjGEDTFJ1WU=
+#[Peer]
+#PublicKey = X7qQfHNDtiUS5+qg2H5T25IwhcWdVbyoFjGEDTFJ1WU=
 #AllowedIps = 10.0.10.3
