--- a/bash-poc/container-vagrant/peer-wg0.conf
+++ b/bash-poc/container-vagrant/peer-wg0.conf
@@ -18,6 +18,6 @@ PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
 AllowedIPs = 10.0.0.3/32
 
 # container on server
-[Peer]
-PublicKey = X7qQfHNDtiUS5+qg2H5T25IwhcWdVbyoFjGEDTFJ1WU=
-AllowedIPs = 10.0.10.3/32
+#[Peer]
+#PublicKey = X7qQfHNDtiUS5+qg2H5T25IwhcWdVbyoFjGEDTFJ1WU=
+#AllowedIPs = 10.0.10.3/32
