--- a/bash-poc/container-vagrant/server-wg0.conf
+++ b/bash-poc/container-vagrant/server-wg0.conf
@@ -14,9 +14,9 @@ PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
 AllowedIPs = 10.0.0.0/24
 
 # j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc= - container0 on peer
-[Peer]
-PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
-AllowedIPs = 10.0.0.3/32
+#[Peer]
+#PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
+#AllowedIPs = 10.0.0.3/32
 
 # container0 on server
 [Peer]
