--- a/bash-poc/container-vagrant/server-container0.conf
+++ b/bash-poc/container-vagrant/server-container0.conf
@@ -6,16 +6,16 @@ PostUp = ip link set lo up
 
 # wg0 on server
 [Peer]
-Endpoint = 192.168.56.10:51820
+Endpoint = 192.168.56.11:51820
 PublicKey = v2XPnF7Yk7KEugBRVyCdD6mssm2Tsc4edDUApwzFoBk=
 AllowedIPs = 0.0.0.0/0
 
 # wg0 on peer
-[Peer]
-PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
-AllowedIPs = 10.0.0.1/32
+#[Peer]
+#PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
+#AllowedIPs = 10.0.0.1/32
 
 # container0 on peer
-[Peer]
-PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
-AllowedIPs = 10.0.0.3/32
+#[Peer]
+#PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
+#AllowedIPs = 10.0.0.3/32
