Complete container to container communication

--- a/bash-poc/c-c-vagrant/server-container0.conf
+++ b/bash-poc/c-c-vagrant/server-container0.conf
@@ -12,12 +12,12 @@ PublicKey = v2XPnF7Yk7KEugBRVyCdD6mssm2Tsc4edDUApwzFoBk=
 AllowedIPs = 0.0.0.0/0
 
 # wg0 on peer
-#[Peer]
-#Endpoint = 192.168.56.10:51820
-#PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
-#AllowedIPs = 10.0.0.0/24
+[Peer]
+Endpoint = 192.168.56.10:51820
+PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
+AllowedIPs = 10.0.0.0/24
 
 # container0 on peer
-#[Peer]
-#PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
-#AllowedIPs = 10.0.0.3/32
+[Peer]
+PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
+AllowedIPs = 10.0.0.3/32
