--- a/bash-poc/c-c-vagrant/server-wg0.conf
+++ b/bash-poc/c-c-vagrant/server-wg0.conf
@@ -8,16 +8,16 @@ PostDown = iptables -D FORWARD -i %i -j ACCEPT; iptables -D FORWARD -o %i -j ACC
 
 # WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg= - peer wg0
 # subnet 10.0.0.0/24
-#[Peer]
-#Endpoint = 192.168.56.10:51820
-#PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
-##AllowedIPs = 10.0.0.0/24
-#PersistentKeepAlive = 10
+[Peer]
+Endpoint = 192.168.56.10:51820
+PublicKey = WzEKDzUqj4XKiyNwCjWYCuFTHCTZxQGjumj/v+Iytxg=
+AllowedIPs = 10.0.0.0/24
+PersistentKeepAlive = 10
 
 # j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc= - container0 on peer
-#[Peer]
-#PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
-#AllowedIPs = 10.0.0.3/32
+[Peer]
+PublicKey = j6Dgd8syAcNM/Uu4yGR/1t+dBbDos7utcjzBcXiZIQc=
+AllowedIPs = 10.0.0.3/32
 
 # container0 on server
 [Peer]
